--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "tymon/jwt-auth": "^1.0",
         "webpatser/laravel-uuid": "^3.0"
     },
     "require-dev": {
